refactor: remove subscription and licensing
