# server/route/api/v1/acl_config.go
@@ -27,7 +27,6 @@ var allowedMethodsOnlyForAdmin = map[string]bool{
 	"/slash.api.v1.UserService/CreateUser":                  true,
 	"/slash.api.v1.UserService/DeleteUser":                  true,
 	"/slash.api.v1.WorkspaceService/UpdateWorkspaceSetting": true,
-	"/slash.api.v1.SubscriptionService/UpdateSubscription":  true,
 }
 
 // isOnlyForAdminAllowedMethod returns true if the method is allowed to be called only by admin.
