# server/route/api/v1/auth_service.go
@@ -17,7 +17,6 @@ import (
 	"github.com/yourselfhosted/slash/plugin/idp/oauth2"
 	v1pb "github.com/yourselfhosted/slash/proto/gen/api/v1"
 	storepb "github.com/yourselfhosted/slash/proto/gen/store"
-	"github.com/yourselfhosted/slash/server/service/license"
 	"github.com/yourselfhosted/slash/store"
 )
 
@@ -69,10 +68,6 @@ func (s *APIV1Service) SignIn(ctx context.Context, request *v1pb.SignInRequest) 
 }
 
 func (s *APIV1Service) SignInWithSSO(ctx context.Context, request *v1pb.SignInWithSSORequest) (*v1pb.User, error) {
-	if !s.LicenseService.IsFeatureEnabled(license.FeatureTypeSSO) {
-		return nil, status.Errorf(codes.PermissionDenied, "SSO is not available in the current plan")
-	}
-
 	identityProviderSetting, err := s.Store.GetWorkspaceSetting(ctx, &store.FindWorkspaceSetting{
 		Key: storepb.WorkspaceSettingKey_WORKSPACE_SETTING_IDENTITY_PROVIDER,
 	})
@@ -120,9 +115,6 @@ func (s *APIV1Service) SignInWithSSO(ctx context.Context, request *v1pb.SignInWi
 		return nil, status.Errorf(codes.Internal, "failed to get user, err: %s", err)
 	}
 	if user == nil {
-		if err := s.checkSeatAvailability(ctx); err != nil {
-			return nil, err
-		}
 		userCreate := &store.User{
 			Email:    email,
 			Nickname: userInfo.DisplayName,
@@ -160,11 +152,6 @@ func (s *APIV1Service) SignUp(ctx context.Context, request *v1pb.SignUpRequest) 
 	}
 	if workspaceSecuritySetting.DisallowUserRegistration {
 		return nil, status.Errorf(codes.PermissionDenied, "sign up is not allowed")
-	}
-
-	// Check if the number of users has reached the maximum.
-	if err := s.checkSeatAvailability(ctx); err != nil {
-		return nil, err
 	}
 
 	passwordHash, err := bcrypt.GenerateFromPassword([]byte(request.Password), bcrypt.DefaultCost)
@@ -225,18 +212,4 @@ func (*APIV1Service) SignOut(ctx context.Context, _ *v1pb.SignOutRequest) (*empt
 		return nil, status.Errorf(codes.Internal, "failed to set grpc header, error: %v", err)
 	}
 	return &emptypb.Empty{}, nil
-}
-
-func (s *APIV1Service) checkSeatAvailability(ctx context.Context) error {
-	if !s.LicenseService.IsFeatureEnabled(license.FeatureTypeUnlimitedAccounts) {
-		userList, err := s.Store.ListUsers(ctx, &store.FindUser{})
-		if err != nil {
-			return status.Errorf(codes.Internal, "failed to list users: %v", err)
-		}
-		seats := s.LicenseService.GetSubscription().Seats
-		if len(userList) >= int(seats) {
-			return status.Errorf(codes.FailedPrecondition, "maximum number of users %d reached", seats)
-		}
-	}
-	return nil
 }
